--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "zustand": "^4.3.9"
   },
   "devDependencies": {
+    "@playwright/test": "^1.36.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
